level_zero-sys/src/ze_api.rs

impl ::std::ops::BitOrAssign for _ze_memory_access_cap_flags_t {
    #[inline]
    fn bitor_assign(&mut self, rhs: _ze_memory_access_cap_flags_t) {
        self.0 |= rhs.0;
    }
}
impl ::std::ops::BitAnd<_ze_memory_access_cap_flags_t> for _ze_memory_access_cap_flags_t {
    type Output = Self;
    #[inline]
    fn bitand(self, other: Self) -> Self {
        _ze_memory_access_cap_flags_t(self.0 & other.0)
    }
}
impl ::std::ops::BitAndAssign for _ze_memory_access_cap_flags_t {
    #[inline]
    fn bitand_assign(&mut self, rhs: _ze_memory_access_cap_flags_t) {
        self.0 &= rhs.0;
    }
}
#[repr(transparent)]
#[doc = ""]
#[doc = " @brief Memory access capability flags"]
#[doc = ""]
#[doc = " @details"]
#[doc = "     - Supported access capabilities for different types of memory"]
#[doc = "       allocations"]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub struct _ze_memory_access_cap_flags_t(pub u32);
#[doc = ""]
#[doc = " @brief Memory access capability flags"]
#[doc = ""]
#[doc = " @details"]
#[doc = "     - Supported access capabilities for different types of memory"]
#[doc = "       allocations"]
pub use self::_ze_memory_access_cap_flags_t as ze_memory_access_cap_flags_t;
#[doc = ""]
#[doc = " @brief Device memory access properties queried using"]
#[doc = "        ::zeDeviceGetMemoryAccessProperties"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _ze_device_memory_access_properties_t {
    #[doc = "< [in] type of this structure"]
    pub stype: ze_structure_type_t,
    #[doc = "< [in,out][optional] pointer to extension-specific structure"]
    pub pNext: *mut ::std::os::raw::c_void,
    #[doc = "< [out] host memory capabilities."]
    #[doc = "< returns 0 (unsupported) or a combination of ::ze_memory_access_cap_flags_t."]
    pub hostAllocCapabilities: ze_memory_access_cap_flags_t,
    #[doc = "< [out] device memory capabilities."]
    #[doc = "< returns 0 (unsupported) or a combination of ::ze_memory_access_cap_flags_t."]
    pub deviceAllocCapabilities: ze_memory_access_cap_flags_t,
    #[doc = "< [out] shared, single-device memory capabilities."]
    #[doc = "< returns 0 (unsupported) or a combination of ::ze_memory_access_cap_flags_t."]
    pub sharedSingleDeviceAllocCapabilities: ze_memory_access_cap_flags_t,
    #[doc = "< [out] shared, cross-device memory capabilities."]
    #[doc = "< returns 0 (unsupported) or a combination of ::ze_memory_access_cap_flags_t."]
    pub sharedCrossDeviceAllocCapabilities: ze_memory_access_cap_flags_t,
    #[doc = "< [out] shared, system memory capabilities."]
    #[doc = "< returns 0 (unsupported) or a combination of ::ze_memory_access_cap_flags_t."]
    pub sharedSystemAllocCapabilities: ze_memory_access_cap_flags_t,
}
#[test]
fn bindgen_test_layout__ze_device_memory_access_properties_t() {
    assert_eq!(
        ::std::mem::size_of::<_ze_device_memory_access_properties_t>(),
        40usize,
        concat!(
            "Size of: ",
            stringify!(_ze_device_memory_access_properties_t)
        )
    );
    assert_eq!(
        ::std::mem::align_of::<_ze_device_memory_access_properties_t>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(_ze_device_memory_access_properties_t)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_memory_access_properties_t>())).stype as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_memory_access_properties_t),
            "::",
            stringify!(stype)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_memory_access_properties_t>())).pNext as *const _
                as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_memory_access_properties_t),
            "::",
            stringify!(pNext)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_memory_access_properties_t>())).hostAllocCapabilities
                as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_memory_access_properties_t),
            "::",
            stringify!(hostAllocCapabilities)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_memory_access_properties_t>()))
                .deviceAllocCapabilities as *const _ as usize
        },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_memory_access_properties_t),
            "::",
            stringify!(deviceAllocCapabilities)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_memory_access_properties_t>()))
                .sharedSingleDeviceAllocCapabilities as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_memory_access_properties_t),
            "::",
            stringify!(sharedSingleDeviceAllocCapabilities)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_memory_access_properties_t>()))
                .sharedCrossDeviceAllocCapabilities as *const _ as usize
        },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_memory_access_properties_t),
            "::",
            stringify!(sharedCrossDeviceAllocCapabilities)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_memory_access_properties_t>()))
                .sharedSystemAllocCapabilities as *const _ as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_memory_access_properties_t),
            "::",
            stringify!(sharedSystemAllocCapabilities)
        )
    );
}
extern "C" {
    #[doc = ""]
    #[doc = " @brief Retrieves memory access properties of the device."]
    #[doc = ""]
    #[doc = " @details"]
    #[doc = "     - The application may call this function from simultaneous threads."]
    #[doc = "     - The implementation of this function should be lock-free."]
    #[doc = ""]
    #[doc = " @remarks"]
    #[doc = "   _Analogues_"]
    #[doc = "     - clGetDeviceInfo"]
    #[doc = ""]
    #[doc = " @returns"]
    #[doc = "     - ::ZE_RESULT_SUCCESS"]
    #[doc = "     - ::ZE_RESULT_ERROR_UNINITIALIZED"]
    #[doc = "     - ::ZE_RESULT_ERROR_DEVICE_LOST"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_HANDLE"]
    #[doc = "         + `nullptr == hDevice`"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_POINTER"]
    #[doc = "         + `nullptr == pMemAccessProperties`"]
    pub fn zeDeviceGetMemoryAccessProperties(
        hDevice: ze_device_handle_t,
        pMemAccessProperties: *mut ze_device_memory_access_properties_t,
    ) -> ze_result_t;
}
impl _ze_device_cache_property_flags_t {
    #[doc = "< Device support User Cache Control (i.e. SLM section vs Generic Cache)"]
    pub const ZE_DEVICE_CACHE_PROPERTY_FLAG_USER_CONTROL: _ze_device_cache_property_flags_t =
        _ze_device_cache_property_flags_t(1);
}
impl _ze_device_cache_property_flags_t {
    pub const ZE_DEVICE_CACHE_PROPERTY_FLAG_FORCE_UINT32: _ze_device_cache_property_flags_t =
        _ze_device_cache_property_flags_t(2147483647);
}
impl ::std::ops::BitOr<_ze_device_cache_property_flags_t> for _ze_device_cache_property_flags_t {
    type Output = Self;
    #[inline]
    fn bitor(self, other: Self) -> Self {
        _ze_device_cache_property_flags_t(self.0 | other.0)
    }
}
impl ::std::ops::BitOrAssign for _ze_device_cache_property_flags_t {
    #[inline]
    fn bitor_assign(&mut self, rhs: _ze_device_cache_property_flags_t) {
        self.0 |= rhs.0;
    }
}
impl ::std::ops::BitAnd<_ze_device_cache_property_flags_t> for _ze_device_cache_property_flags_t {
    type Output = Self;
    #[inline]
    fn bitand(self, other: Self) -> Self {
        _ze_device_cache_property_flags_t(self.0 & other.0)
    }
}
impl ::std::ops::BitAndAssign for _ze_device_cache_property_flags_t {
    #[inline]
    fn bitand_assign(&mut self, rhs: _ze_device_cache_property_flags_t) {
        self.0 &= rhs.0;
    }
}
#[repr(transparent)]
#[doc = ""]
#[doc = " @brief Supported cache control property flags"]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub struct _ze_device_cache_property_flags_t(pub u32);
#[doc = ""]
#[doc = " @brief Supported cache control property flags"]
pub use self::_ze_device_cache_property_flags_t as ze_device_cache_property_flags_t;
#[doc = ""]
#[doc = " @brief Device cache properties queried using ::zeDeviceGetCacheProperties"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _ze_device_cache_properties_t {
    #[doc = "< [in] type of this structure"]
    pub stype: ze_structure_type_t,
    #[doc = "< [in,out][optional] pointer to extension-specific structure"]
    pub pNext: *mut ::std::os::raw::c_void,
    #[doc = "< [out] 0 (none) or a valid combination of"]
    #[doc = "< ::ze_device_cache_property_flags_t"]
    pub flags: ze_device_cache_property_flags_t,
    #[doc = "< [out] Per-cache size, in bytes"]
    pub cacheSize: usize,
}
#[test]
fn bindgen_test_layout__ze_device_cache_properties_t() {
    assert_eq!(
        ::std::mem::size_of::<_ze_device_cache_properties_t>(),
        32usize,
        concat!("Size of: ", stringify!(_ze_device_cache_properties_t))
    );
    assert_eq!(
        ::std::mem::align_of::<_ze_device_cache_properties_t>(),
        8usize,
        concat!("Alignment of ", stringify!(_ze_device_cache_properties_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_cache_properties_t>())).stype as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_cache_properties_t),
            "::",
            stringify!(stype)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_cache_properties_t>())).pNext as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_cache_properties_t),
            "::",
            stringify!(pNext)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_cache_properties_t>())).flags as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_cache_properties_t),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_cache_properties_t>())).cacheSize as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_cache_properties_t),
            "::",
            stringify!(cacheSize)
        )
    );
}
